--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "seed:countries": "ts-node src/seed/countries.seed.ts"
+    "seed:countries": "ts-node src/seed/countries.seed.ts",
+    "seed:banks": "ts-node src/seed/banks.seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,7 @@
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "bullmq": "^5.0.0",
+    "bullmq": "^5.63.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
